err/hashdist.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hashdist'...
Listing './lib/python3.5/site-packages/hashdist/cli'...
Listing './lib/python3.5/site-packages/hashdist/cli/test'...
Listing './lib/python3.5/site-packages/hashdist/core'...
Compiling './lib/python3.5/site-packages/hashdist/core/build_store.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/build_store.py", line 394
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashdist/core/build_tools.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/build_tools.py", line 200
    print filename
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hashdist/core/cache.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/cache.py", line 159
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashdist/core/fileutils.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/fileutils.py", line 28
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashdist/core/links.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/links.py", line 265
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashdist/core/run_job.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/run_job.py", line 222
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashdist/core/source_cache.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/source_cache.py", line 192
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hashdist/core/test'...
Compiling './lib/python3.5/site-packages/hashdist/core/test/test_build_store.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/test/test_build_store.py", line 172
    except BuildFailedError, e_first:
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashdist/core/test/test_build_tools.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/test/test_build_tools.py", line 23
    assert os.stat(pjoin(dirname, 'bin', 'hit')).st_mode & 0100
                                                              ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/hashdist/core/test/test_source_cache.py'...
***   File "./lib/python3.5/site-packages/hashdist/core/test/test_source_cache.py", line 361
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hashdist/deps'...
Listing './lib/python3.5/site-packages/hashdist/deps/jsonschema'...
Listing './lib/python3.5/site-packages/hashdist/deps/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/hashdist/deps/yaml'...
Compiling './lib/python3.5/site-packages/hashdist/deps/yaml/constructor.py'...
***   File "./lib/python3.5/site-packages/hashdist/deps/yaml/constructor.py", line 130
    except TypeError, exc:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashdist/deps/yaml/reader.py'...
***   File "./lib/python3.5/site-packages/hashdist/deps/yaml/reader.py", line 157
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashdist/deps/yaml/resolver.py'...
***   File "./lib/python3.5/site-packages/hashdist/deps/yaml/resolver.py", line 171
    re.compile(ur'''^(?:yes|Yes|YES|no|No|NO
                    |true|True|TRUE|false|False|FALSE
                    |on|On|ON|off|Off|OFF)$''', re.X),
                                            
                                                     
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/hashdist/deps/yaml/scanner.py'...
***   File "./lib/python3.5/site-packages/hashdist/deps/yaml/scanner.py", line 1427
    except UnicodeDecodeError, exc:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hashdist/formats'...
Listing './lib/python3.5/site-packages/hashdist/formats/tests'...
Listing './lib/python3.5/site-packages/hashdist/host'...
Compiling './lib/python3.5/site-packages/hashdist/host/debian.py'...
***   File "./lib/python3.5/site-packages/hashdist/host/debian.py", line 23
    except OSError, e:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hashdist/host/test'...
Compiling './lib/python3.5/site-packages/hashdist/host/test/test_debian.py'...
***   File "./lib/python3.5/site-packages/hashdist/host/test/test_debian.py", line 14
    except WrongHostTypeError, e:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hashdist/spec'...
Listing './lib/python3.5/site-packages/hashdist/spec/tests'...
Listing './lib/python3.5/site-packages/hashdist/test'...
Listing './lib/python3.5/site-packages/hashdist-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
